--- a/NginxLB/docker-compose.yml
+++ b/NginxLB/docker-compose.yml
@@ -1,15 +1,20 @@
+version: '2'
+
 services:
   nginx:
     build: ./nginx
     ports:
       - "7003:80"
+    depends_on:
+      - app_1
+      - app_2
     
-  app1:
+  app_1:
     build: ./app1
     ports:
       - "7001:80"
   
-  app2:
+  app_2:
     build: ./app2
     ports:
       - "7002:80"
