--- a/NginxLB/docker-compose.yml
+++ b/NginxLB/docker-compose.yml
@@ -1,20 +1,20 @@
-version: '2'
+version: '3'
 
 services:
-  nginx:
+  nginxserver:
     build: ./nginx
     ports:
       - "7003:80"
     depends_on:
-      - app_1
-      - app_2
+      - nginx_1
+      - nginx_2
     
-  app_1:
+  nginx_1:
     build: ./app1
     ports:
       - "7001:80"
   
-  app_2:
+  nginx_2:
     build: ./app2
     ports:
       - "7002:80"
