--- a/NginxLB/docker-compose.yml
+++ b/NginxLB/docker-compose.yml
@@ -1,20 +1,23 @@
-version: '3'
+version: '2'
 
 services:
   nginxserver:
     build: ./nginx
     ports:
-      - "7003:80"
+      - "80:80"
     depends_on:
-      - nginx_1
-      - nginx_2
+      - app1
+      - app2
+
     
-  nginx_1:
+  app1:
     build: ./app1
     ports:
-      - "7001:80"
+      - "3001:80"
+
   
-  nginx_2:
+  app2:
     build: ./app2
     ports:
-      - "7002:80"
+      - "3002:80"
+
