--- a/NginxLB/nginx/nginx.conf
+++ b/NginxLB/nginx/nginx.conf
@@ -1,7 +1,7 @@
 http {
     upstream loadbalancer {
-      server ruchan.me:7001;
-      server ruchan.me:7002;
+      server localhost:3001;
+      server localhost:3002;
     }
   
     server {
