edit config file because of 502 error

--- a/NginxLB/nginx/nginx.conf
+++ b/NginxLB/nginx/nginx.conf
@@ -1,11 +1,10 @@
 http {
     upstream loadbalancer {
-      server localhost:3001;
-      server localhost:3002;
+      server 172.17.0.1:7001;
+      server 172.17.0.1:7002;
     }
   
     server {
-      listen 80;
       location / {
         proxy_pass http://loadbalancer;
       }
