--- a/NginxLB/docker-compose.yml
+++ b/NginxLB/docker-compose.yml
@@ -1,23 +1,18 @@
-version: '2'
-
 services:
-  nginxserver:
+  nginx_1:
+    build: ./app1
+    ports:
+      - "7001:80"
+  
+  nginx_2:
+    build: ./app2
+    ports:
+      - "7002:80"
+  
+  nginx:
     build: ./nginx
     ports:
       - "80:80"
     depends_on:
-      - app1
-      - app2
-
-    
-  app1:
-    build: ./app1
-    ports:
-      - "3001:80"
-
-  
-  app2:
-    build: ./app2
-    ports:
-      - "3002:80"
-
+      - nginx_1
+      - nginx_2
