edit files for run on ruchan.me

--- a/NginxLB/nginx/nginx.conf
+++ b/NginxLB/nginx/nginx.conf
@@ -1,7 +1,7 @@
 http {
     upstream loadbalancer {
-      server 172.17.0.1:7001;
-      server 172.17.0.1:7002;
+      server ruchan.me:7001;
+      server ruchan.me:7002;
     }
   
     server {
