add ansible automation

--- a/LB_ReverseP_Nginx/nginx/default.conf
+++ b/LB_ReverseP_Nginx/nginx/default.conf
@@ -6,7 +6,10 @@ upstream app1 {
 }
 
 server {
+    listen 80;
     location /{
+        root    /usr/share/nginx/html;
+        index   index.html index.html;
         proxy_pass http://app1;
     }
 
