--- a/LB_ReverseP_Nginx/nginx/service_a.conf
+++ b/LB_ReverseP_Nginx/nginx/service_a.conf
@@ -1,10 +1,15 @@
 upstream service_a {
     # Here we configure Nginx where to redirect the traffic
+    # Portu 80 yapınca ./service_a/index.html calisiyor
     server service_a:7005;
 }
 
 server{
+    
+
+
     # The port on which our proxy is listening 
+    # If change port 80, 502 Gateway
     listen 7005;
 
     # Domain for which traffic is to be redirected
