--- a/LB_ReverseP_Nginx/docker-compose.yml
+++ b/LB_ReverseP_Nginx/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - ./app1/:/usr/share/nginx/html/:ro
     ports:
       - "7006:80"
+    networks:
+      - internal-network
     
   
   app2:
@@ -34,6 +36,8 @@ services:
       - ./app2/:/usr/share/nginx/html/:ro
     ports:
       - "7007:80"
+    networks:
+      - internal-network
     
     
   app3:
@@ -42,6 +46,8 @@ services:
       - ./app3/:/usr/share/nginx/html/:ro
     ports:
       - "7008:80"
+    networks:
+      - internal-network
  
 
 
