--- a/Ansible/inventory.yml
+++ b/Ansible/inventory.yml
@@ -3,5 +3,5 @@ web:
     test
   vars:
     ansible_ssh_private_key_file: ~/.ssh/id_rsa
-    ansible_user: root
-    ansible_password: m359176
+    ansible_user: "your_user
+    ansible_password: "your_user_password"
