--- a/Ansible/inventory.yaml
+++ b/Ansible/inventory.yaml
@@ -1,17 +1,13 @@
-#This is example file
 gcp:
-  children:
-    kubernetes:
-      hosts:
-        master:
-          ansible_host: 
-          ansible_user: 
-          ansible_ssh_private_key_file: 
-        
-        worker:
-          ansible_host: 
-          ansible_user: 
-          ansible_ssh_private_key_file: 
+  hosts:
+    master:
+      ansible_host: master
+      ansible_user: user
+
+    worker:
+      ansible_host: worker
+      ansible_user: user
+
         
 
        
