--- a/Ansible/playbooks/kubernetes/kubernetes_playbook.yaml
+++ b/Ansible/playbooks/kubernetes/kubernetes_playbook.yaml
@@ -61,14 +61,10 @@
          daemon_reload: true
          name: containerd
 
-    - name: add gpg key
-      apt_key:
-        url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-   
-    - name: add kubernetes repo
-      apt_repository:
-        repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
-        state: present
+    - name: Add Kubernetes GPG key
+      shell: |
+        curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.31/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+        echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.31/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
 
     - name: Install kubectl, kubeadm, kubelet
       apt:
