--- a/LoadBalancer&ReverseProxy-Nginx/proxy/default.conf
+++ b/LoadBalancer&ReverseProxy-Nginx/proxy/default.conf
@@ -1,17 +1,14 @@
 # These are docker contianers hotsnames. Nginx and other containers are in the same network so they can communicate with each other using their hostnames. Default port is 80.
-upstream app {
-    server app1;
-    server app2;
-    server app3;
-
+upstream backend {
+    server app1:80;
+    server app2:80;
+    server app3:80;
 }
 
 server {
     listen 80;
-    location /{
-        root    /usr/share/nginx/html;
-        index   index.html index.html;
-        proxy_pass http://app;
-    }
 
+    location / {
+        proxy_pass http://backend;
+    }
 }
