--- a/Nginx-LoadBalancer/nginx/nginx.conf
+++ b/Nginx-LoadBalancer/nginx/nginx.conf
@@ -1,7 +1,7 @@
 http {
     upstream loadbalancer {
-      server ruchan.me:7001;
-      server ruchan.me:7002;
+      server app1:80;
+      server app2:80;
     }
   
     server {
