edited Private Registry Page

--- a/PrivateRegistry/docker-compose.yml
+++ b/PrivateRegistry/docker-compose.yml
@@ -1,6 +1,5 @@
 version: '3'
 services:
-
   registry:
     image: registry:latest
     container_name: registry
@@ -33,26 +32,18 @@ services:
       - docker
     depends_on:
       - registry
-      - portainer
 
   registry-ui:
     image: joxit/docker-registry-ui:main
     hostname: registry-ui
     restart: always
-    ports:
-      - 8080:80
     environment:
       - SINGLE_REGISTRY=true
+      - UI_ROOT_PATH=/ui
       - REGISTRY_TITLE=Docker Registry UI
       - DELETE_IMAGES=true
       - SHOW_CONTENT_DIGEST=true
       - NGINX_PROXY_PASS_URL=http://registry:5000
-      - SHOW_CATALOG_NB_TAGS=true
-      - CATALOG_MIN_BRANCHES=1
-      - CATALOG_MAX_BRANCHES=1
-      - TAGLIST_PAGE_SIZE=100
-      - REGISTRY_SECURED=false
-      - CATALOG_ELEMENTS_LIMIT=1000
     container_name: registry-ui
     networks:
       - docker
