--- a/PrivateRegistry/nginx/nginx.conf
+++ b/PrivateRegistry/nginx/nginx.conf
@@ -1,62 +1,41 @@
 events {}
 http {
-upstream docker-registry {
+  upstream docker-registry {
     server registry:5000;
-}
+  }
 
-upstream portainer-ui {
-    server portainer:9000;
-}
-
-upstream registry-ui {
+  upstream registry-ui {
     server registry-ui:80;
-}
+  }
 
-# Configuraton for Private Registry
-server {
-    listen 5000 ssl;
-    server_name docker.mavano.software;
-    client_max_body_size 0;
-
-    ssl_certificate         /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key     /etc/nginx/ssl/privkey.pem;
-    location / {
-        proxy_pass http://docker-registry;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-}
-}
-
-#Configuration for Portainer and UI
-server {
-    listen 80;
+  server {
     listen 443 ssl;
-    server_name docker.mavano.software;
+    server_name repo.ruchan.dev;
 
-    ssl_certificate         /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key     /etc/nginx/ssl/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-
-    location  /portainer/ {
-	rewrite /portainer/(.*) /$1  break;
-        proxy_pass http://portainer-ui;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    location /ui/ {
+      proxy_pass http://registry-ui/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location  /ui/ {
-	rewrite /ui/(.*) /$1  break;
-        proxy_pass http://registry-ui;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    location / {
+      client_max_body_size 0;
+
+      add_header 'Access-Control-Allow-Origin' 'https://repo.ruchan.dev' always;
+      add_header 'Access-Control-Allow-Methods' 'HEAD, GET, OPTIONS, DELETE' always;
+      add_header 'Access-Control-Allow-Credentials' 'true' always;
+      add_header 'Access-Control-Allow-Headers' 'Authorization, Accept, Cache-Control' always;
+
+      proxy_pass http://docker-registry;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-}
-
+  }
 }
